# otus-cpp-homework

./: .clang-format  .gitignore  CMakeLists.txt  index.html
.github/: ci.py
.github/workflows/: allocator.yml  ci.yml  cmd.yml  doxy.yml  doxygen.yml  editor.yml  matrix.yml
03-allocator/html/: CMakeLists_8txt.html  annotated.html  classedu__allocator-members.html  classedu__allocator.html  classedu__container-members.html  classedu__container.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  edu__allocator_8hpp.html  edu__allocator_8hpp_source.html  edu__container_8hpp.html  edu__container_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  structedu__allocator_1_1rebind-members.html  structedu__allocator_1_1rebind.html
03-allocator/latex/: annotated.tex  classedu__allocator.tex  classedu__container.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  edu__allocator_8hpp.tex  edu__container_8hpp.tex  files.tex  main_8cpp.tex  refman.tex  structedu__allocator_1_1rebind.tex
04-doxygen/html/: CMakeLists_8txt.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  is__stl__container__like_8hpp.html  is__stl__container__like_8hpp_source.html  is__string_8hpp.html  is__string_8hpp_source.html  main_8cpp.html  (+18 more)
ci/: __init__.py  actions.py  ci.py  github.py  project.py  release.py
homework/: CMakeLists.txt
homework/bayan/: CMakeLists.txt
homework/bayan/src/: CMakeLists.txt  main.cpp  options.cpp  options.hpp
homework/bayan/src/hash/: CMakeLists.txt  hash.cpp  hash.hpp  md5.cpp  md5.hpp
homework/matrix/: CMakeLists.txt
homework/matrix/src/: CMakeLists.txt  main.cpp  matrix.hpp
homework/matrix/src/detail/: generators.hpp  indexer.hpp  iterator.hpp
homework/matrix/test/: matrix_test.cpp
(+462 files in other folders)
